[tool.poetry]
name = "pyphoto-picker"
version = "0.1.0"
description = "Random photo picker."
authors = ["Eric Reichert <eric@reichertconsulting.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-watcher = "^0.3.4"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
